--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "fluent-ffmpeg": "^2.1.2",
     "koa": "^2.11.0",
     "node-uuid": "^1.4.8"
