--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "express": "^4.17.1",
     "fluent-ffmpeg": "^2.1.2",
     "koa": "^2.11.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-sslify": "^4.0.3",
     "node-uuid": "^1.4.8"
   }
 }
